app/resources/style/header.scss
#header {
  display: flex;
  background-color: white;
  border-bottom: 1px solid maroon;
  height: 55px;
  padding: 0;

  #hamburger-toggle {
    top: 0;
    height: 55px;
    border: none;
    cursor: pointer;
  }

  #navbar-supported-content {
    box-shadow: none;
    padding: 0;
    height: 100%;
  }

  #search-results {
    overflow: auto;
    max-height: 300px;
    position: absolute;
    top: 55px;
    left: 90px;
    min-width: 200px;
    border-radius: 0;
    max-width: 600px;
    background-color: rgba(255,255,255,.9);
    text-align: center;

    .list-group-item {
      display: block;
      padding: 10px;
      font-size: 14px;
      background-color: rgba(255, 255, 255, 0.5);
    }
  }

  #search-container {
    height: 55px;
    width: 100%;

    .dropdown {
      padding: 0;
    }

    .dropdown-item {
      font-size: 14px;
    }

    #search-input {
      border-radius: 0;
      font-size: 16px;
      margin: 0;
      height: 54px;
      border-top: none;
      border-bottom: none;
      border-right: none;
    }

    #search-filter {
      border-radius: 0;
      font-size: 14px;
      width: 100%;
      height: 54px;
      padding: 10px;
      border-left: none;
      border-top: none;
      border-bottom: none;
    }

    #search-submit {
      border-radius: 0;
      font-size: 16px;
      padding: 10px;
      height: 54.5px;
      border-left: none;
      border-top: none;
      border-bottom: 1px solid maroon;
    }
  }

  #brand-logo {
    height: 50px;
    margin: 0 15px;
    width: 60px;
  }
}


a {
  text-decoration: none;
}

#navbar-links {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  align-items: center;
  font-size: 16px;
  background-color: white;

  .nav-item:hover {
    background-color: lightgrey;
  }

  .nav-item {
    background-color: white;
    height: 100%;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;

    .navbar-buttons {
      padding: 20px;
      color: black;
      height: 105%;
    }

    .active {
      border-radius: 0;
      background-color: maroon;
      color: white;
      height: 100%;
    }
  }
}

